[package]
name = "volmem"
version = "0.1.1"
edition = "2018"
authors = ["Daniel P. Teberian"]
description = "A simple, no_std crate that can be used in place of volatile."
license = "Apache-2.0"
repository = "https://github.com/LibertyOS-Development/volmem/"

[features]
unstable = []

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
features = ["unstable"]
